# events-face

./: .gitignore  README.md  celery.py  pyproject.toml
src/: urls.py
src/authentication/: serializers.py  urls.py  views.py
src/config/: celery.py  settings.py  urls.py
src/events/: admin.py  models.py  pagination.py  serializers.py  tasks.py  tests.py  urls.py  views.py
src/events/migrations/: 0001_initial.py  0002_registration.py
src/sync/: models.py
src/sync/management/commands/: sync_events.py
src/sync/migrations/: 0001_initial.py
